<resources>
    <string name="app_name">蓝牙发现系统</string>
    <string name="loginPhoneHint">请输入手机号</string>
    <string name="loginPasswordHint">请输入密码</string>
    <string name="userLogin">登录</string>
    <string name="userRegister">注册</string>
    <string name="registerPhoneHint">注册手机号</string>
    <string name="registerPasswordHint">注册密码</string>
    <string name="registerPasswordCheckHint">再次确认密码</string>
    <string name="registerUsername">用户名</string>
    <string name="registerGender">选择性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="receiverTask">接取任务</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openBlueTooth">打开蓝牙</string>
    <string name="surround_device">周围设备</string>
    <string name="scanBlueTooth">扫描设备</string>
    <string name="bind_device">绑定设备</string>
    <string name="open_camera">拍摄照片</string>
    <string name="switch_user">切换账号</string>
    <string name="logout">退出登录</string>
    <string name="uploadImg">上传照片</string>
    <string name="open_album">从相册选取</string>
    <string name="add_new_task">新建任务</string>
    <string name="already_publish_task">已发布任务</string>
    <string name="already_receive_task">已接取任务</string>
    <string name="finish_task">结束任务</string>
    <string name="download_image">下载图片</string>
    <string name="task_name">任务名称</string>
    <string name="task_info">任务描述</string>
    <string name="device_list">选择设备</string>
    <string name="user_add_new_task">确认提交</string>
    <string name="max_receiver_num">最大接取人数</string>
    <string name="start_navigation">开始导航</string>
    <string name="map">地图</string>
    <string name="device_name">设备命名</string>
    <string name="device_price">设备价格</string>
    <string name="device_uid">蓝牙MAC地址</string>
    <string name="startBluetoothScan">开始扫描</string>
    <string name="endBluetoothScan">停止扫描</string>
    <string name="InputMacAddress">输入蓝牙MAC地址</string>
    <string name="bindBluetoothMacAddress">绑定mac地址</string>
    <string name="navigation">导航</string>
    <string name="ask_for_help">请求帮助</string>
    <string name="openTask">开放给所有人</string>
    <string name="check_task_progress">查看任务进度</string>
    <string name="finish_auction">结束拍卖</string>
</resources>