<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:gravity="center"
       android:layout_gravity="center"
       android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_gravity="center"
               android:layout_weight="1"
               android:gravity="center"
               android:text="@string/task_name" />

           <EditText
               android:id="@+id/new_task_name"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="3" />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_gravity="center"
               android:layout_weight="1"
               android:gravity="center"
               android:text="@string/task_info" />

           <EditText
               android:id="@+id/new_task_info"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="3" />
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_gravity="center"
               android:layout_weight="1"
               android:gravity="center"
               android:text="@string/device_list" />

           <Spinner
               android:id="@+id/device_list"
               android:layout_width="0dp"
               android:layout_height="50dp"
               android:layout_weight="3"/>
       </LinearLayout>
       <LinearLayout
           android:id="@+id/max_receiver_liner_layout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_gravity="center"
               android:layout_weight="1"
               android:gravity="center"
               android:text="@string/max_receiver_num" />

           <EditText
               android:id="@+id/max_receiver_num"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="3" />
       </LinearLayout>
       <CheckBox
           android:layout_margin="10dp"
           android:id="@+id/open_task"
           android:text="@string/openTask"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/user_add_new_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_add_new_task"
            />
   </LinearLayout>


</LinearLayout>